// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .cache-mua0hn {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-mua0hn .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-yzbg0m {
  font-weight: 500;
  color: #151A2D;
}

.cache-yzbg0m:after {
  content: ':';
}

.cache-sxxa9q {
  color: #4A4F62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-mua0hn"
  >
    <dt
      class="eu9mc5y2 cache-yzbg0m"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-sxxa9q"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-yzbg0m"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-sxxa9q"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .cache-j0kbsd {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-j0kbsd .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-j0kbsd>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-j0kbsd>.eu9mc5y1 {
  margin-top: 0;
}

.cache-j0kbsd .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-yzbg0m {
  font-weight: 500;
  color: #151A2D;
}

.cache-yzbg0m:after {
  content: ':';
}

.cache-sxxa9q {
  color: #4A4F62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-j0kbsd"
  >
    <dt
      class="eu9mc5y2 cache-yzbg0m"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-sxxa9q"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-yzbg0m"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-sxxa9q"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .cache-5tsnl3 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.cache-5tsnl3 .eu9mc5y1+.eu9mc5y2 {
  margin-top: 16px;
}

.cache-5tsnl3>.eu9mc5y2 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.cache-5tsnl3>.eu9mc5y1 {
  margin-top: 0;
}

.cache-5tsnl3 .eu9mc5y1+.eu9mc5y2+.eu9mc5y1 {
  margin-top: 16px;
}

.cache-5tsnl3>.eu9mc5y1 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.cache-5tsnl3>.eu9mc5y1::selection {
  color: #FFFFFF;
  background: #4F0599;
}

.cache-yzbg0m {
  font-weight: 500;
  color: #151A2D;
}

.cache-yzbg0m:after {
  content: ':';
}

.cache-sxxa9q {
  color: #4A4F62;
  margin: 0;
  margin-top: 8px;
}

<dl
    class="eu9mc5y0 cache-5tsnl3"
  >
    <dt
      class="eu9mc5y2 cache-yzbg0m"
    >
      Name
    </dt>
    <dd
      class="eu9mc5y1 cache-sxxa9q"
    >
      Big instance
    </dd>
    <dt
      class="eu9mc5y2 cache-yzbg0m"
    >
      Size
    </dt>
    <dd
      class="eu9mc5y1 cache-sxxa9q"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
